# sgemm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindCBLAS.cmake  FindMKL.cmake
scripts/: run.sh
src/: benchmark.cpp  gemm-impl.cpp  gemm.cpp  gemm.h  main.cpp  stub_tensor.h  tensor.cpp  tensor.h  tests.cpp  utils.h
